--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     font-size: 14px;
     line-height: 1.5; 
     font-family: 'Raleway', sans-serif;
+    background-color: #009432;
 }
 
 h1 {
